# mlmm_toolkit

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTE_v0.1.0-alpha.md  THIRD_PARTY_NOTICES.txt  pyproject.toml
.claude/skills/: README.md
.github/scripts/: check_all_scan_contract.py  check_engineering_markers.py  check_help_registry.py  check_intro_template.py  check_markdown_links.py  check_skill_commands.py  check_skill_drift.py  generate_reference.py  run_docs_quality.py  smoke_docs_commands.py  smoke_dump_trajectories.py
.github/workflows/: docs-quality.yml  docs.yml  docs_quality.yml  markers.yml  pytest.yml  release.yml  smoke_test.yml
docs/: add-elem-info.md  add_elem_info.md  all.md  architecture.md  backends.md  barrier-strategy.md  bond-summary.md  bond_summary.md  cli-conventions.md  cli_conventions.md  cli_doc.md  code_and_cli.md  concepts.md  conf.py  define-layer.md  define_layer.md  device-hpc.md  device_hpc.md  dft.md  energy-diagram.md  energy_diagram.md  extract.md  fix-altloc.md  fix_altloc.md  freq.md  getting-started.md  getting_started.md  glossary.md  index.md  init.md  irc.md  json-output.md  mcp_server.md  mlmm-calc.md  mlmm_calc.md  mm-parm.md  mm_parm.md  oniom-export.md  oniom-gaussian.md  oniom-import.md  (+33 more)
docs/_static/: custom.css  theme_toggle.js
docs/_templates/: page.html
docs/ja/: add-elem-info.md  add_elem_info.md  all.md  architecture.md  backends.md  bond-summary.md  cli-conventions.md  cli_conventions.md  concepts.md  define-layer.md  define_layer.md  device-hpc.md  device_hpc.md  dft.md  energy-diagram.md  energy_diagram.md  extract.md  fix-altloc.md  fix_altloc.md  freq.md  getting-started.md  getting_started.md  glossary.md  index.md  init.md  irc.md  json-output.md  mcp_server.md  mlmm-calc.md  mlmm_calc.md  mm-parm.md  mm_parm.md  oniom-export.md  oniom-gaussian.md  oniom-import.md  oniom-orca.md  oniom_export.md  oniom_gaussian.md  oniom_import.md  oniom_orca.md  (+27 more)
docs/reference/: yaml.md
examples/: 3-1_opt_ase.py  3-2b_opt_pysis.yaml  3-3_test_core.py  cartesian_scan.yml  complex.parm7  complex.rst7  energy_summary.yml  irc_eulerpc.yaml  mcp_client_config.json  partial_hessian_dimer.yml  run.sh  tutorial.md  tutorial1.md  tutorial2.md  tutorial3.md
examples/chorismate_mutase/: 10_energy_summary.yaml  1_opt.yaml  2_scan.yaml  3_opt.yaml  4_opt.yaml  5_gs.yaml  6_tsopt.yaml  7_irc.yaml  8_opt.yaml  9_opt.yaml  run.sh
examples/cm_mutation/: 10_energy_summary.yaml  3_opt.yaml  4_opt.yaml  5_gs.yaml  6_tsopt.yaml  7_irc.yaml  8_opt.yaml  9_opt.yaml  run.sh
examples/methyltransferase/: 10_energy_summary.yaml  1_opt.yaml  2_scan.yaml  3_opt.yaml  4_opt.yaml  5_gs.yaml  6_tsopt.yaml  7_irc.yaml  8_opt.yaml  9_opt.yaml  complex.parm7  complex.rst7  run.sh  run_all.sh  run_stepwise.sh
examples/toy_system/: 3-1_opt_ase.py  3-2a_opt_pysis.py  3-2b_opt_pysis.yaml  3-3_test_core.py  complex.parm7  complex.rst7  opt_ase.py  opt_pysisyphus.py  run.sh  test_core.py
hessian_ff/: README.md  __init__.py  analytical_hessian.py  constants.py  forcefield.py  loaders.py  prmtop_parmed.py  system.py  workflows.py
hessian_ff/native/: Makefile  __init__.py  analytical_hessian.py  analytical_hessian_ext.cpp  bonded.py  bonded_ext.cpp  loader.py  nonbonded.py  nonbonded_ext.cpp
hessian_ff/terms/: __init__.py  angle.py  bond.py  cmap.py  dihedral.py  nonbonded.py
hessian_ff/tests/: conftest.py  test_coords_input.py  test_energy_force.py  test_hessian.py  test_smoke.py  test_validation.py
mlmm/: __init__.py  __main__.py  _version.py  add_elem_info.py  align_freeze_atoms.py  all.py  bond_changes.py  bond_summary.py  bool_compat.py  cartesian_bond_scan.py  cartesian_bond_scan_cli.py  cli.py  cli_utils.py  def_ml_region.py  default_group.py  defaults.py  define_layer.py  dft.py  energy_diagram.py  energy_summary.py  extract.py  fix_altloc.py  freq.py  harmonic_constraints.py  hessian_cache.py  hessian_calc.py  irc.py  irc_eulerpc.py  mlmm_ase.py  mlmm_calc.py  mlmm_pysis.py  mm_parm.py  oniom_export.py  oniom_import.py  opt.py  partial_hessian_dimer.py  partial_hessian_dimer_cli.py  path_opt.py  path_search.py  pysis_runner.py  (+9 more)
mlmm/backends/: __init__.py  _determinism.py  custom.py  mlmm_calc.py  xtb_embedcharge_correction.py
mlmm/cli/: __init__.py  app.py  bool_compat.py  (+5 more)
mlmm_toolkit/: __init__.py  __main__.py  _version.py  add_elem_info.py  advanced_help.py  align_freeze_atoms.py  all.py  bond_changes.py  bool_compat.py  cli.py  cli_utils.py  default_group.py  defaults.py  define_layer.py  dft.py  energy_diagram.py  extract.py  fix_altloc.py  freq.py  harmonic_constraints.py  hessian_calc.py  init.py  irc.py  mlmm_calc.py  mm_parm.py  oniom_export.py  opt.py  path_opt.py  path_search.py  preflight.py  scan.py  scan2d.py  scan3d.py  scan_common.py  summary_log.py  trj2fig.py  tsopt.py  utils.py  xtb_embedcharge_correction.py
pysisyphus/: Geometry.py  README.md  __init__.py  _array.py  elem_data.py  filtertrj.py  helpers.py  plot.py  run.py  trj.py
scripts/: check_all_scan_contract.py  check_intro_template.py  check_markdown_links.py  generate_reference.py  run_docs_quality.py  smoke_docs_commands.py  smoke_dump_trajectories.py
skills/: README.md
tests/: README.md  conftest.py  test_all_helpers.py  test_all_layer_honor.py  test_all_multiplicity_option.py  test_array_shim_equivalence.py  test_bond_changes.py  test_bool_compat_cli.py  test_cli_feature_regressions.py  test_cli_help.py  test_cli_utils.py  test_custom_calc_file.py  test_default_group.py  test_defaults.py  test_e2e_minimal.py  test_error_envelope.py  test_error_handling.py  test_extract.py  test_freeze_noncart_geometry.py  test_freq_active_dof.py  test_help_grouping.py  test_imports.py  test_init.py  test_mcp_runner.py  test_mlmm_calc_serial_gap.py  test_mm_parm_preflight.py  test_opt.py  test_precision_dispatch.py  test_preflight.py  test_scan_oniom_smoke.py  test_summary_log.py  test_symmetrize.py  test_utils.py  test_write_result_json.py
thermoanalysis/: QCData.py  README.md  thermo.py
(+528 files in other folders)
