[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlmm"
description = "ML/MM toolkit"
readme = "README.md"
authors = [{name = "Takuto Ohmura"}]
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.11"
dependencies = [
    "fairchem-core @ git+https://github.com/t-0hmura/fairchem.git#subdirectory=packages/fairchem-core",
    "aimnet @ git+https://github.com/t-0hmura/aimnetcentral.git",
    "numpy<2.0",
    "matplotlib",
    "plotly",
    "kaleido",
    "pyyaml",
    "ase>=3.25.0",
    "biopython",
    "rdkit",
    "OpenMM",
    "OpenMM-CUDA-12",
    "ParmEd,
    "torch>=2.6.0",
    "pysisyphus @ git+https://github.com/t-0hmura/pysisyphus_for_mlmm.git",
]

[project.scripts]
mlmm = "mlmm.mlmm_pysis:run_pysis"
def_ml_region = "mlmm.def_ml_region:def_ml_region"
add_elem_info = "mlmm.utils:add_elem_info_console"
get_freeze_indices = "mlmm.utils:get_freeze_indices_console"
xyz_geom2pdb = "mlmm.utils:xyz_geom2pdb_console"
ts_search = "mlmm.partial_hessian_dimer_cli:main"
bond_scan = "mlmm.cartesian_bond_scan_cli:main"
energy_summary = "mlmm.energy_summary:main"
trj2fig = "mlmm.trj2fig:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mlmm*"]

[tool.setuptools]
package-data = { "mlmm" = ["py.typed"] }

[tool.setuptools.dynamic]
version = {attr = "mlmm.__version__"}
