[build-system]
requires = ["setuptools", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mlmm-toolkit"
description = "mlmm - ML/MM toolkit for enzyme reaction analysis"
readme = "README.md"
authors = [{name = "Takuto Ohmura", email = "ohmura.takuto@gmail.com"}]
license = {file = "LICENSE"}
dynamic = ["version"]
requires-python = ">=3.11"
keywords = [
    "computational-chemistry",
    "enzyme",
    "QM/MM",
    "ML/MM",
    "UMA",
    "transition-state",
    "reaction-mechanism",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    # mlmm core dependencies
    "fairchem-core",
    "torch~=2.8.0",
    # hessian_ff JIT-compiles its C++ kernels through torch.utils.cpp_extension,
    # which on torch >= 2.x requires Ninja and no longer has a distutils fallback.
    # The pip `ninja` wheel ships a binary for every platform (incl. linux-aarch64),
    # so depending on it makes a clean-env install build the extensions out of the box.
    "ninja",
    # No direct mlmm/* import of torch_geometric or torch_scatter; both are
    # listed here to guarantee they install alongside fairchem-core's
    # historical pull-them-in behaviour. fairchem-core 2.19.0 no longer
    # requires them transitively, but older versions did, and dropping the
    # pin would silently break a clean-env install on those.
    "torch_geometric",
    "torch_scatter",
    "numpy>=2.0,<2.5",
    "biopython>=1.80,<2.0",
    "ase>=3.26.0",
    "ParmEd",
    "pyyaml>=6.0,<7.0",
    "click>=8.1,<9.0",
    "plotly>=6.1.1",
    "kaleido",

    # pysisyphus dependencies (bundled)
    "autograd",
    "dask",
    "distributed",
    "h5py",
    "jinja2",
    "natsort",
    "psutil",
    "rmsd",
    "scipy",
    "sympy",
    "scikit-learn",
    "pyparsing",

    # thermoanalysis dependencies (bundled)
    "pandas",
]

[project.optional-dependencies]
orb = ["orb-models"]
aimnet = ["aimnet>=0.2.0"]
pdbfixer = ["pdbfixer"]
# NOTE: there is deliberately no `[mace]` extra. `mace-torch` hard-pins
# `e3nn==0.4.4` whereas `fairchem-core` (UMA) needs `e3nn>=0.5`, so the two
# cannot share an env; declaring the extra here would break the default UMA
# install. Put MACE in its own conda env instead: `pip uninstall -y
# fairchem-core && pip install mace-torch` (e.g. in `mlmm-toolkit-mace`).
dft = [
    "pyscf>=2.13.0",
    "gpu4pyscf-cuda12x>=1.7.0; platform_machine == 'x86_64'",
    "cupy-cuda12x>=13.0,!=13.4.0; platform_machine == 'x86_64'",
    "basis-set-exchange>=0.11",
]
dev = ["pytest", "pytest-cov", "pytest-timeout"]
docs = [
    "sphinx>=7.0",
    "myst-parser>=2.0",
    "furo>=2024.0",
    "sphinx-copybutton>=0.5",
]
mcp = [
    "mcp[cli]>=1.0",
]

[project.urls]
Homepage = "https://github.com/t-0hmura/mlmm_toolkit"
Repository = "https://github.com/t-0hmura/mlmm_toolkit"
Documentation = "https://t-0hmura.github.io/mlmm_toolkit/"
"Bug Tracker" = "https://github.com/t-0hmura/mlmm_toolkit/issues"

[project.scripts]
mlmm = "mlmm.cli:cli"
mlmm-mcp = "mlmm.mcp.server:serve"

[tool.pytest.ini_options]
testpaths = ["tests", "hessian_ff/tests"]
addopts = "-v --tb=short --timeout=120"
markers = [
    "slow: marks tests as slow",
    "gpu: marks tests that require CUDA GPU (deselect with '-m \"not gpu\"')",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlmm*", "pysisyphus*", "thermoanalysis*", "hessian_ff*"]

[tool.setuptools.package-data]
mlmm = ["py.typed"]
hessian_ff = ["native/*.cpp", "native/Makefile"]

[tool.setuptools_scm]
version_file = "mlmm/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
